<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorF4">
    <LinearLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="3dp">
            <TextView
                android:id="@+id/button_back"
                style="@style/tabBackButton"
                android:layout_marginRight="0dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tv_brand_logo"
                style="@style/tabHeaderTextView"
                android:layout_marginLeft="10dp"
                android:text="@string/lan" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/tabHeaderBigTitle"
                android:text="@string/lan_title"/>
            <LinearLayout
                style="@style/tabHeaderIconCircle"
                android:layout_marginTop="12dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/language_icon"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/rl_bottom_button"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_below="@id/rl_header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/rg_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp">
                <RadioButton android:id="@+id/radio_english"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/lan_english"
                    android:checked="true"/>
                <RadioButton android:id="@+id/radio_hindi"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/lan_hindi"/>
                <RadioButton android:id="@+id/radio_tamil"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/lan_tamil"/>
                <RadioButton android:id="@+id/radio_telugu"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/lan_telugu"/>
                <RadioButton android:id="@+id/radio_malayalam"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/lan_malayalam"/>
                <RadioButton android:id="@+id/radio_marathi"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/lan_marathi"/>
                <RadioButton android:id="@+id/radio_kannada"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/lan_kannada"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/rl_bottom_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true">
        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardUseCompatPadding="true"
            app:cardElevation="4dp"
            app:cardCornerRadius="3dp" >
            <Button
                style="@style/ButtonPrimary"
                android:layout_height="50dp"
                android:id="@+id/btn_started"
                android:text="@string/continue_btn">
            </Button>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
