<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorF4">
    <LinearLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/infoBGColor"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="3dp">
            <TextView
                android:id="@+id/button_back"
                style="@style/tabBackButton" />
            <TextView
                android:id="@+id/tv_brand_logo"
                style="@style/tabHeaderTextView"
                android:text="@string/reg_title" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/tabHeaderBigTitle"
                android:maxWidth="270dp"
                android:text="@string/reg_sub_title"/>

            <LinearLayout
                style="@style/tabHeaderIconCircle"
                android:background="@drawable/info_icon"
                android:layout_marginTop="12dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_content"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/rl_header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/edittext_default2"
                android:paddingTop="3dp"
                android:paddingBottom="18dp"
                android:layout_marginBottom="10dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_name"
                    style="@style/MaterialInput2"
                    android:layout_below="@id/tv_login_logo">
                    <EditText
                        android:id="@+id/et_name"
                        style="@style/DefaultEditText2"
                        android:hint="Full Name*"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/edittext_default2"
                android:paddingTop="3dp"
                android:paddingBottom="18dp"
                android:layout_marginBottom="10dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_mobile"
                    style="@style/MaterialInput2"
                    android:layout_below="@id/tv_login_logo">
                    <EditText
                        android:id="@+id/et_mobileno"
                        style="@style/DefaultEditText2"
                        android:inputType = "number"
                        android:digits="0123456789"
                        android:hint="Mobile Number*"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/edittext_default2"
                android:paddingTop="3dp"
                android:paddingBottom="18dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_email"
                    style="@style/MaterialInput2"
                    android:layout_below="@id/tv_login_logo">
                    <EditText
                        android:id="@+id/et_email"
                        style="@style/DefaultEditText2"
                        android:hint="Email Address"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/rl_bottom_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true">
        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardUseCompatPadding="true"
            app:cardElevation="4dp"
            app:cardCornerRadius="3dp" >
            <Button
                style="@style/ButtonPrimary"
                android:layout_height="50dp"
                android:id="@+id/btn_submit"
                android:text="@string/btn_sub_text">
            </Button>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
