<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorF4">
    <LinearLayout
        android:id="@+id/ll_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/rl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/vehicleBgColor"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentLeft="true">
                    <TextView
                        android:id="@+id/button_back"
                        style="@style/tabBackButton" />
                    <TextView
                        android:id="@+id/tv_brand_logo"
                        style="@style/tabHeaderTextView"
                        android:text="@string/vehicle_reg" />
                </LinearLayout>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Skip"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    android:layout_margin="10dp"/>
            </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/tabHeaderBigTitle"
                    android:text="@string/vehilce_reg_subtitle"/>

                <LinearLayout
                    style="@style/tabHeaderIconCircle"
                    android:background="@drawable/vehicle_icon"
                    android:layout_marginTop="12dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_registration"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none"
            android:layout_below="@id/rl_header">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">
                <RadioGroup
                    android:id="@+id/rg_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <RadioButton android:id="@+id/radio_two"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/two_label"
                        android:checked="true"/>
                    <RadioButton android:id="@+id/radio_four"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/four_label"/>
                </RadioGroup>
                <RelativeLayout
                    android:id="@+id/rl_car_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@drawable/edittext_default2"
                    android:paddingTop="3dp"
                    android:paddingBottom="18dp">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_car_brand"
                        style="@style/MaterialInput2"
                        android:layout_below="@id/tv_login_logo"
                        android:layout_alignParentLeft="true">
                        <EditText
                            android:id="@+id/et_brand"
                            style="@style/DefaultEditText2"
                            android:layout_alignParentLeft="true"
                            android:hint="Vehicle Brand*"
                            android:enabled="false"/>
                    </android.support.design.widget.TextInputLayout>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/caret_down"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Eg: Maruti, Toyota, Bajaj etc.."
                    android:textSize="12dp"
                    android:textColor="@color/color80"
                    android:layout_marginBottom="10dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@drawable/edittext_default2"
                    android:paddingTop="3dp"
                    android:paddingBottom="18dp">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_car_type"
                        style="@style/MaterialInput2"
                        android:layout_below="@id/tv_login_logo"
                        android:layout_alignParentLeft="true">
                        <EditText
                            android:id="@+id/et_name"
                            style="@style/DefaultEditText2"
                            android:layout_alignParentLeft="true"
                            android:hint="Vehicle Model*"
                            android:enabled="false"/>
                    </android.support.design.widget.TextInputLayout>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/caret_down"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Eg: Swift, Tiago etc.."
                    android:textSize="12dp"
                    android:textColor="@color/color80"
                    android:layout_marginBottom="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@drawable/edittext_default2"
                    android:paddingTop="3dp"
                    android:paddingBottom="18dp">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_no."
                        style="@style/MaterialInput2"
                        android:layout_below="@id/tv_login_logo">
                        <EditText
                            android:id="@+id/et_vehicleno"
                            style="@style/DefaultEditText2"
                            android:hint="Vehicle No.*"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Eg: DL4S CS 1234.."
                    android:textSize="12dp"
                    android:textColor="@color/color80"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </ScrollView>
        <!-- Adding bottom sheet after main content -->
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rl_bottom_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_below="@id/ll_base">
        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardUseCompatPadding="true"
            app:cardElevation="4dp"
            app:cardCornerRadius="3dp" >
            <Button
                style="@style/ButtonPrimary"
                android:layout_height="50dp"
                android:id="@+id/btn_submit"
                android:text="@string/btn_sub_text">
            </Button>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <include layout="@layout/activity_car_brand" />
</android.support.design.widget.CoordinatorLayout>
