<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorF4">
    <LinearLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/otpBGColor"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="3dp">
            <TextView
                android:id="@+id/button_back"
                style="@style/tabBackButton" />
            <TextView
                android:id="@+id/tv_brand_logo"
                style="@style/tabHeaderTextView"
                android:text="@string/verification_title" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/tabHeaderBigTitle"
                android:maxWidth="270dp"
                android:text="@string/otp_top_title"/>

            <LinearLayout
                style="@style/tabHeaderIconCircle"
                android:background="@drawable/otp_rounded"
                android:layout_marginTop="12dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/ic_password"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please enter the OTP below to complete the verification process."
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:id="@+id/ll_otp_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <EditText
                android:id="@+id/et_first"
                android:inputType="number"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border80"
                android:padding="10dp"
                android:maxLength="1"
                android:textAlignment="center"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_second"
                android:inputType="number"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border80"
                android:padding="10dp"
                android:textAlignment="center"
                android:maxLength="1"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_third"
                android:inputType="number"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border80"
                android:padding="10dp"
                android:textAlignment="center"
                android:maxLength="1"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_forth"
                android:inputType="number"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border80"
                android:padding="10dp"
                android:textAlignment="center"
                android:maxLength="1"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_fifth"
                android:inputType="number"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border80"
                android:padding="10dp"
                android:textAlignment="center"
                android:maxLength="1"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_sixth"
                android:inputType="number"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border80"
                android:padding="10dp"
                android:maxLength="1"
                android:textAlignment="center">
            </EditText>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rl_bottom_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_alignParentBottom="true">
            <android.support.v7.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:cardUseCompatPadding="true"
                app:cardElevation="4dp"
                app:cardCornerRadius="3dp" >
                <Button
                    style="@style/ButtonPrimary"
                    android:layout_height="50dp"
                    android:id="@+id/btn_login"
                    android:text="@string/btn_sub_text">
                </Button>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_counter_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Resent OTP in (0:30)"
                android:textAlignment="center"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
